# colamone_rs

./: Cargo.toml  docker-compose.yml
src/: ai.rs  lib.rs  rule.rs
tests/: ai.rs  rule.rs
